Update 'slf3ow41s-dotnet-basic' component image to: tssc-quay-quay-tssc-quay.apps.cluster-k44rr.k44rr.sandbox1126.opentlc.com/tssc/rhtap-qe-dotnet-basic:3332cd219c099ce7723be46a1aa576a872d52e9c@sha256:f24700365a9f320734da847970e15aae2d046c57af6d878fbde6a33fcecbc42e

--- a/components/slf3ow41s-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/slf3ow41s-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: slf3ow41s-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: tssc-quay-quay-tssc-quay.apps.cluster-k44rr.k44rr.sandbox1126.opentlc.com/tssc/rhtap-qe-dotnet-basic:3332cd219c099ce7723be46a1aa576a872d52e9c@sha256:f24700365a9f320734da847970e15aae2d046c57af6d878fbde6a33fcecbc42e
+          name: container-image
